base/infrastructure/tailscale/egress/j/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: j-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`j.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: j-egress
          port: 9117
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: j-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`j.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: j-egress
          port: 9117
  tls:
    secretName: j-tls
